--- a/src/index.html.ejs
+++ b/src/index.html.ejs
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8" />
-        <link rel="icon" href="<%= webpackConfig.output.publicPath %>/favicon.ico" />
+        <link rel="icon" href="<%= webpackConfig.output.publicPath %>favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="theme-color" content="#000000" />
         <!-- TODO: Set app description -->
@@ -10,8 +10,8 @@
           name="description"
           content="Your app description here"
         />
-        <link rel="apple-touch-icon" href="<%= webpackConfig.output.publicPath %>/logo192.png" />
-        <link rel="manifest" href="<%= webpackConfig.output.publicPath %>/manifest.json" />
+        <link rel="apple-touch-icon" href="<%= webpackConfig.output.publicPath %>logo192.png" />
+        <link rel="manifest" href="<%= webpackConfig.output.publicPath %>manifest.json" />
         <!-- TODO: Set app title -->
         <title>React App</title>
       </head>
